<resources>
    <string name="app_name">Majorana Open Day 2016</string>
    <string name="dev">Developed by Faston</string>

    <string name="error">Error</string>
    <string name="error2">"Connection failed or they treat a Bluetooth SPP. Please try again.</string>
    <string name="notavailable">Bluetooth device not available</string>
    <string name="uncoupled">Bluetooth devices unpaired</string>
    <string name="plasewait">Please wait...</string>
    <string name="connection">Connection...</string>
    <string name="devicec">Paired devices</string>
    <string name="devicec1">Refresh list paired devices</string>
    <string name="led">Led</string>
    <string name="fan">Fan</string>
    <string name="motor">Motor</string>
    <string name="reverse">Reverse</string>
    <string name="disconnects">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="about">About</string>
    <string name="back">To close the application press twice on back</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ok">Ok</string>

</resources>

