<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/relativeLayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView"
                android:src="@drawable/ledoff"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch1"
                android:checked="false"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/led"
                android:id="@+id/textView2"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_marginLeft="12dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView"
                android:layout_marginStart="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/relativeLayout2"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView2"
                android:src="@drawable/funoff"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch2"
                android:checked="false"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fan"
                android:id="@+id/textView3"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/relativeLayout3"
            android:layout_below="@+id/relativeLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView3"
                android:src="@drawable/motoroff"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:text="str"
                android:id="@+id/button2"
                android:textColor="#ffffff"
                android:background="@drawable/buttonshape"
                android:textSize="8dp"
                android:layout_toLeftOf="@+id/button3"
                android:layout_toStartOf="@+id/button3"
                android:layout_alignBottom="@+id/button3"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:text="@string/stop"
                android:id="@+id/button3"
                android:textColor="@color/colorPrimaryText"
                android:background="@drawable/buttonshape1"
                android:textSize="8dp"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/motor"
                android:id="@+id/textView4"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/button4"
                android:backgroundTint="@color/colorPrimary"
                android:layout_above="@+id/textView9"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignStart="@+id/button2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dev"
                android:id="@+id/textView9"
                android:textSize="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textIsSelectable="false"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

    </RelativeLayout>



</ScrollView>
